fix legend label alignment

--- a/src/uPlot.css
+++ b/src/uPlot.css
@@ -82,6 +82,7 @@
 
 .uplot .legend th > * {
 	vertical-align: middle;
+	display: inline-block;
 }
 
 .uplot .legend .ident {
